--- a/application/blogs/templates/blogs/layout/base.html
+++ b/application/blogs/templates/blogs/layout/base.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
@@ -84,6 +84,51 @@
       .dataform {
         margin-top: 2%;
       }
+      .related-post-card {
+    background-color: #ffffff;
+}
+.related-card {
+  width: 100%;
+  height: 300px;
+  background-image: url('img_flowers.jpg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  
+  /* border: 1px solid red; */
+}
+.related-post-image{
+  width: 100%;
+  height: 100%;
+}
+.related-post-info{
+  padding: 10px;
+}
+.post-footer .related-posts .related-post-card .related-post-image-wrapper {
+    width: 100%;
+}
+img {
+  width: auto;
+  height: auto;
+}
+/* For mobile phones: */
+[class*="col-"] {
+  width: 100%;
+}
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  .col-1 {width: 8.33%;}
+  .col-2 {width: 16.66%;}
+  .col-3 {width: 25%;}
+  .col-4 {width: 33.33%;}
+  .col-5 {width: 41.66%;}
+  .col-6 {width: 50%;}
+  .col-7 {width: 58.33%;}
+  .col-8 {width: 66.66%;}
+  .col-9 {width: 75%;}
+  .col-10 {width: 83.33%;}
+  .col-11 {width: 91.66%;}
+  .col-12 {width: 100%;}
+}
     </style>
   </head>
   <body class="d-flex flex-column"></body>
