--- a/application/blogs/templates/blogs/main/index.html
+++ b/application/blogs/templates/blogs/main/index.html
@@ -91,11 +91,129 @@
       <p class="lead mb-0">You've reached the end!</p>
     </div>
   </div>
-  <div class="card border-0 shadow my-5">
+  <!-- <div class="card border-0 shadow my-5">
     <div class="card-body p-5">
-      <h1 class="font-weight-light">Fixed Full Page Background Image</h1>
+      <p> -->
+  <div class="row justify-content-center">
+    <div class="col-4 related-card">
+      <div class="related-post-card">
+        <a class="related-post-card" href="/scrape-metadata-json-ld/"
+          ><div class="related-post-image-wrapper">
+            <img
+              class="related-post-image lazyloaded"
+              data-src="https://hackersandslackers-cdn.storage.googleapis.com/2020/07/json-ld-pyld-1@2x.jpg"
+              alt="scrape-metadata-json-ld"
+              src="https://hackersandslackers-cdn.storage.googleapis.com/2020/07/json-ld-pyld-1@2x.jpg"
+            />
+          </div>
+          <div class="related-post-info">
+            <h5 class="related-post-title">
+              Scrape Structured Data with Python and Extruct
+            </h5>
+            <div class="related-post-tags">
+              <svg
+                stroke="currentColor"
+                fill="currentColor"
+                stroke-width="0"
+                viewBox="0 0 1024 1024"
+                class="tags-icon"
+                height="1em"
+                width="1em"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M483.2 790.3L861.4 412c1.7-1.7 2.5-4 2.3-6.3l-25.5-301.4c-.7-7.8-6.8-13.9-14.6-14.6L522.2 64.3c-2.3-.2-4.7.6-6.3 2.3L137.7 444.8a8.03 8.03 0 0 0 0 11.3l334.2 334.2c3.1 3.2 8.2 3.2 11.3 0zm62.6-651.7l224.6 19 19 224.6L477.5 694 233.9 450.5l311.9-311.9zm60.16 186.23a48 48 0 1 0 67.88-67.89 48 48 0 1 0-67.88 67.89zM889.7 539.8l-39.6-39.5a8.03 8.03 0 0 0-11.3 0l-362 361.3-237.6-237a8.03 8.03 0 0 0-11.3 0l-39.6 39.5a8.03 8.03 0 0 0 0 11.3l243.2 242.8 39.6 39.5c3.1 3.1 8.2 3.1 11.3 0l407.3-406.6c3.1-3.1 3.1-8.2 0-11.3z"
+                ></path>
+              </svg>
+              <span class="tag">Python</span
+              ><span class="5ef8eb6ef9742e302666b871 tag-separator">, </span
+              ><span class="tag">Scraping</span>
+            </div>
+          </div></a
+        >
+      </div>
+    </div>
+    <div class="col-4 related-card">
+      <div class="related-post-card">
+        <a class="related-post-card" href="/scrape-metadata-json-ld/"
+          ><div class="related-post-image-wrapper">
+            <img
+              class="related-post-image lazyloaded"
+              data-src="https://hackersandslackers-cdn.storage.googleapis.com/2020/07/json-ld-pyld-1@2x.jpg"
+              alt="scrape-metadata-json-ld"
+              src="https://hackersandslackers-cdn.storage.googleapis.com/2020/07/json-ld-pyld-1@2x.jpg"
+            />
+          </div>
+          <div class="related-post-info">
+            <h5 class="related-post-title">
+              Scrape Structured Data with Python and Extruct
+            </h5>
+            <div class="related-post-tags">
+              <svg
+                stroke="currentColor"
+                fill="currentColor"
+                stroke-width="0"
+                viewBox="0 0 1024 1024"
+                class="tags-icon"
+                height="1em"
+                width="1em"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M483.2 790.3L861.4 412c1.7-1.7 2.5-4 2.3-6.3l-25.5-301.4c-.7-7.8-6.8-13.9-14.6-14.6L522.2 64.3c-2.3-.2-4.7.6-6.3 2.3L137.7 444.8a8.03 8.03 0 0 0 0 11.3l334.2 334.2c3.1 3.2 8.2 3.2 11.3 0zm62.6-651.7l224.6 19 19 224.6L477.5 694 233.9 450.5l311.9-311.9zm60.16 186.23a48 48 0 1 0 67.88-67.89 48 48 0 1 0-67.88 67.89zM889.7 539.8l-39.6-39.5a8.03 8.03 0 0 0-11.3 0l-362 361.3-237.6-237a8.03 8.03 0 0 0-11.3 0l-39.6 39.5a8.03 8.03 0 0 0 0 11.3l243.2 242.8 39.6 39.5c3.1 3.1 8.2 3.1 11.3 0l407.3-406.6c3.1-3.1 3.1-8.2 0-11.3z"
+                ></path>
+              </svg>
+              <span class="tag">Python</span
+              ><span class="5ef8eb6ef9742e302666b871 tag-separator">, </span
+              ><span class="tag">Scraping</span>
+            </div>
+          </div></a
+        >
+      </div>
+    </div>
+    <div class="col-4 related-card">
+      <div class="related-post-card">
+        <a class="related-post-card" href="/scrape-metadata-json-ld/"
+          ><div class="related-post-image-wrapper">
+            <img
+              class="related-post-image lazyloaded"
+              data-src="https://hackersandslackers-cdn.storage.googleapis.com/2020/07/json-ld-pyld-1@2x.jpg"
+              alt="scrape-metadata-json-ld"
+              src="https://hackersandslackers-cdn.storage.googleapis.com/2020/07/json-ld-pyld-1@2x.jpg"
+            />
+          </div>
+          <div class="related-post-info">
+            <h5 class="related-post-title">
+              Scrape Structured Data with Python and Extruct
+            </h5>
+            <div class="related-post-tags">
+              <svg
+                stroke="currentColor"
+                fill="currentColor"
+                stroke-width="0"
+                viewBox="0 0 1024 1024"
+                class="tags-icon"
+                height="1em"
+                width="1em"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M483.2 790.3L861.4 412c1.7-1.7 2.5-4 2.3-6.3l-25.5-301.4c-.7-7.8-6.8-13.9-14.6-14.6L522.2 64.3c-2.3-.2-4.7.6-6.3 2.3L137.7 444.8a8.03 8.03 0 0 0 0 11.3l334.2 334.2c3.1 3.2 8.2 3.2 11.3 0zm62.6-651.7l224.6 19 19 224.6L477.5 694 233.9 450.5l311.9-311.9zm60.16 186.23a48 48 0 1 0 67.88-67.89 48 48 0 1 0-67.88 67.89zM889.7 539.8l-39.6-39.5a8.03 8.03 0 0 0-11.3 0l-362 361.3-237.6-237a8.03 8.03 0 0 0-11.3 0l-39.6 39.5a8.03 8.03 0 0 0 0 11.3l243.2 242.8 39.6 39.5c3.1 3.1 8.2 3.1 11.3 0l407.3-406.6c3.1-3.1 3.1-8.2 0-11.3z"
+                ></path>
+              </svg>
+              <span class="tag">Python</span
+              ><span class="5ef8eb6ef9742e302666b871 tag-separator">, </span
+              ><span class="tag">Scraping</span>
+            </div>
+          </div></a
+        >
+      </div>
     </div>
   </div>
-</div>
 
-{% endblock %}
+  <!-- </p>
+      <h1 class="font-weight-light"></h1>
+    </div>
+  </div> -->
+</div>
+{% include "./blogs/layout/footer.html" %} {% endblock %}
