--- a/application/blogs/templates/blogs/main/addblogs.html
+++ b/application/blogs/templates/blogs/main/addblogs.html
@@ -1,6 +1,219 @@
 {% extends "./blogs/layout/base.html" %} {% block content %} {% include
 "./blogs/layout/nevbar.html" %}
 <!-- Page Content -->
+<style>
+  .ql-viewer p,
+  .ql-viewer ol,
+  .ql-viewer ul,
+  .ql-viewer pre,
+  .ql-viewer blockquote,
+  .ql-viewer h1,
+  .ql-viewer h2,
+  .ql-viewer h3,
+  .ql-viewer h4,
+  .ql-viewer h5,
+  .ql-viewer h6 {
+    margin: 0;
+    padding: 0;
+  }
+
+  .ql-viewer {
+    padding: 12px 15px;
+    border: 1px solid #c1c1c1;
+  }
+
+  .ql-viewer .ql-font-serif {
+    font-family: Georgia, Times New Roman, serif;
+  }
+
+  .ql-viewer .ql-font-monospace {
+    font-family: Monaco, Courier New, monospace;
+  }
+
+  .ql-viewer .ql-size-small {
+    font-size: 0.75em;
+  }
+
+  .ql-viewer .ql-size-large {
+    font-size: 1.5em;
+  }
+
+  .ql-viewer .ql-size-huge {
+    font-size: 2.5em;
+  }
+
+  .ql-viewer .ql-direction-rtl {
+    direction: rtl;
+    text-align: inherit;
+  }
+
+  .ql-viewer .ql-align-center {
+    text-align: center;
+  }
+
+  .ql-viewer .ql-align-justify {
+    text-align: justify;
+  }
+
+  .ql-viewer .ql-align-right {
+    text-align: right;
+  }
+
+  .ql-viewer blockquote {
+    border-left: 4px solid #ccc;
+    padding-left: 16px;
+  }
+
+  .ql-viewer code,
+  .ql-viewer pre {
+    background-color: #f0f0f0;
+    border-radius: 3px;
+    padding: 6px 10px;
+  }
+
+  .ql-viewer ul>li[data-checked=true]::before {
+    content: '\2611';
+  }
+
+  .ql-viewer ul>li[data-checked=false]::before {
+    content: '\2610';
+  }
+
+  .ql-viewer ol>li,
+  .ql-viewer ul>li {
+    list-style-type: none;
+  }
+
+
+  .ql-viewer ol {
+    counter-reset: mylist
+  }
+
+  .ql-viewer ol>li:before {
+    counter-increment: mylist;
+    content: counter(mylist, decimal) '. ';
+  }
+
+  .ql-viewer ol ol>li:before {
+    content: counter(mylist, lower-alpha) '. ';
+  }
+
+  .ql-viewer ol ol ol>li:before {
+    content: counter(mylist, lower-roman) '. ';
+  }
+
+  .ql-viewer ol ol ol ol>li:before {
+    content: counter(mylist, decimal) '. ';
+  }
+
+  .ql-viewer ol ol ol ol ol>li:before {
+    content: counter(mylist, lower-alpha) '. ';
+  }
+
+  .ql-viewer ol ol ol ol ol ol>li:before {
+    content: counter(mylist, lower-roman) '. ';
+  }
+
+  .ql-viewer ol ol ol ol ol ol ol>li:before {
+    content: counter(mylist, decimal) '. ';
+  }
+
+  .ql-viewer ol ol ol ol ol ol ol ol>li:before {
+    content: counter(mylist, lower-alpha) '. ';
+  }
+
+  .ql-viewer ol ol ol ol ol ol ol ol ol>li:before {
+    content: counter(mylist, lower-roman) '. ';
+  }
+
+
+  /* ql indent */
+  .ql-viewer .ql-indent-1:not(.ql-direction-rtl) {
+    padding-left: 3em;
+  }
+
+  .ql-viewer .ql-indent-1.ql-direction-rtl.ql-align-right {
+    padding-right: 3em;
+  }
+
+  .ql-viewer .ql-indent-2:not(.ql-direction-rtl) {
+    padding-left: 6em;
+  }
+
+  .ql-viewer .ql-indent-2.ql-direction-rtl.ql-align-right {
+    padding-right: 6em;
+  }
+
+  .ql-viewer .ql-indent-3:not(.ql-direction-rtl) {
+    padding-left: 9em;
+  }
+
+  .ql-viewer .ql-indent-3.ql-direction-rtl.ql-align-right {
+    padding-right: 9em;
+  }
+
+  .ql-viewer .ql-indent-4:not(.ql-direction-rtl) {
+    padding-left: 12em;
+  }
+
+  .ql-viewer .ql-indent-4.ql-direction-rtl.ql-align-right {
+    padding-right: 12em;
+  }
+
+  .ql-viewer .ql-indent-5:not(.ql-direction-rtl) {
+    padding-left: 15em;
+  }
+
+  .ql-viewer .ql-indent-5.ql-direction-rtl.ql-align-right {
+    padding-right: 15em;
+  }
+
+  .ql-viewer .ql-indent-6:not(.ql-direction-rtl) {
+    padding-left: 18em;
+  }
+
+  .ql-viewer .ql-indent-6.ql-direction-rtl.ql-align-right {
+    padding-right: 18em;
+  }
+
+  .ql-viewer .ql-indent-7:not(.ql-direction-rtl) {
+    padding-left: 21em;
+  }
+
+  .ql-viewer .ql-indent-7.ql-direction-rtl.ql-align-right {
+    padding-right: 21em;
+  }
+
+  .ql-viewer .ql-indent-8:not(.ql-direction-rtl) {
+    padding-left: 24em;
+  }
+
+  .ql-viewer .ql-indent-8.ql-direction-rtl.ql-align-right {
+    padding-right: 24em;
+  }
+
+  .ql-viewer .ql-indent-9:not(.ql-direction-rtl) {
+    padding-left: 27em;
+  }
+
+  .ql-viewer .ql-indent-9.ql-direction-rtl.ql-align-right {
+    padding-right: 27em;
+  }
+
+  /* video */
+  .ql-viewer .ql-video {
+    display: block;
+    max-width: 100%;
+  }
+
+  .ql-viewer .ql-video.ql-align-center {
+    margin: 0 auto;
+  }
+
+  .ql-viewer .ql-video.ql-align-right {
+    margin: 0 0 0 auto;
+  }
+</style>
 <div class="container">
   <div class="card border-0 shadow my-5">
     <div class="card-body p-5">
@@ -10,14 +223,14 @@
   <div class="card border-0 shadow my-5">
     <div class="card-body p-5">
       <h1 class="font-weight-light">Add blog</h1>
-      <form>
+      <form action="{{url_for('blogs.receiver')}}" method="POST">
         <div class="form-group">
           <label for="exampleFormControlInput1">Blog Title</label>
-          <input type="text" class="form-control" id="title" placeholder="Blog Title" />
+          <input type="text" class="form-control" name="title" placeholder="Blog Title" />
         </div>
         <div class="form-group">
           <label for="exampleFormControlInput1">Author</label>
-          <select class="form-control" id="author">
+          <select class="form-control" name="author">
             <option>-----</option>
             {% for i in author %}
             <option>{{i.name}}</option>
@@ -26,7 +239,7 @@
         </div>
         <div class="form-group">
           <label for="exampleFormControlInput1">Series</label>
-          <select class="form-control" id="series">
+          <select class="form-control" name="series">
             <option>-----</option>
             {% for i in series %}
             <option>{{i.title}}</option>
@@ -35,41 +248,119 @@
         </div>
         <div class="form-group">
           <label for="exampleFormControlInput1">Time</label>
-          <input type="text" class="form-control" id="time" placeholder="Time" />
+          <input type="text" class="form-control" name="time" placeholder="Time" />
         </div>
         <div class="form-group">
           <label for="exampleFormControlInput1">Date</label>
-          <input type="text" class="form-control" id="date" placeholder="Date" />
+          <input type="text" class="form-control" name="date" placeholder="Date" />
         </div>
         <div class="form-group">
           <label for="exampleFormControlInput1">Blog Tags</label>
-          <input type="text" class="form-control" id="tags" placeholder="Tags" />
+          <input type="text" class="form-control" name="tags" placeholder="Tags" />
         </div>
         <div class="form-group">
           <label for="exampleFormControlInput1">Meta Tags</label>
-          <input type="text" class="form-control" id="meta" placeholder="Meta" />
+          <input type="text" class="form-control" name="meta" placeholder="Meta" />
         </div>
         <div class="form-group">
           <label for="exampleFormControlTextarea1">Content</label>
           <!-- Create the editor container -->
           <div id="editor" style="height:500px;overflow:auto"></div>
+          <input type="text" id="htmloutput" class="form-control" name="editor" placeholder="Slug" />
         </div>
         <div class="form-group">
           <label for="exampleFormControlInput1">Slug</label>
-          <input type="text" class="form-control" id="slug" placeholder="Slug" />
+          <input type="text" class="form-control" name="slug" placeholder="Slug" />
         </div>
-        <a onclick="mysubmit()" class="btn btn-primary">Save Blogs & View</a>
-        <!-- <input type="submit" class="btn btn-primary" placeholder="Save Blogs" /> -->
+        <!-- <a type="submit" class="btn btn-primary">Save Blogs & View</a> -->
+        <input type="submit" class="btn btn-primary" value="Save Blogs & View" />
       </form>
     </div>
     <br />
+    <div class="col  ">
+      <div class="ql-container aql-snow">
+        <div id="converted-view" class="ql-viewer" style="margin-top:69px;border-top:1px solid #cecece;"></div>
+      </div>
+    </div>
   </div>
 </div>
 <!-- Include the Quill library -->
 <script src="https://cdn.quilljs.com/1.0.0/quill.js"></script>
-<script src="//cdn.rawgit.com/kensnyder/quill-image-resize-module/3411c9a7/image-resize.min.js"></script>
-<!-- Initialize Quill editor -->
+<script src="{{url_for('static',filename='dist/browser/QuillDeltaToHtmlConverter.bundle.js')}}"></script>
+<script src="https://cdn.quilljs.com/1.2.3/quill.js"></script>
+<script src="https://cdn.rawgit.com/kensnyder/quill-image-resize-module/3411c9a7/image-resize.min.js"></script>
 <script>
+  var toolbarOptions = [
+    ['bold', 'italic', 'underline', 'strike',
+      {
+        'script': 'sub'
+      }, {
+        'script': 'super'
+      },
+      {
+        'color': []
+      }, {
+        'background': []
+      }, 'code'
+    ],
+    [{
+      'font': []
+    }, {
+      'size': ['small', false, 'large', 'huge']
+    }],
+
+    ['link', 'image', 'video', 'formula'],
+    ['blockquote', 'code-block', {
+      'header': 1
+    },
+      {
+        'list': 'ordered'
+      }, {
+        'list': 'bullet'
+      }, {
+        'list': 'check'
+      }
+    ],
+    [{
+      'indent': '-1'
+    }, {
+      'indent': '+1'
+    }, {
+      'direction': 'rtl'
+    }, {
+      'align': []
+    }],
+    ['clean']
+  ];
+  var quill = new Quill('#editor', {
+    theme: 'snow',
+    placeholder: 'type here...',
+    formula: true,
+    syntax: true,
+    modules: {
+      imageResize: {
+        displaySize: true
+      },
+      toolbar: toolbarOptions
+    }
+  });
+
+  quill.on('text-change', function (v) {
+    var delta = quill.getContents();
+    data = JSON.stringify(delta.ops)
+    cont = data.replace(new RegExp("\\\\n", "g"), "\\\\n");
+    document.getElementById("htmloutput").value = cont
+    console.log(delta.ops);
+    var qdc = new window.QuillDeltaToHtmlConverter(delta.ops, window.opts_ || {});
+    var html = qdc.convert();
+    console.log(html);
+    document.getElementById('converted-view').innerHTML = html;
+
+  });
+
+</script>
+<!-- Initialize Quill editor -->
+<!-- <script>
   let html;
   var toolbarOptions = [
     ["bold", "italic", "underline", "strike"], // toggled buttons
@@ -119,51 +410,52 @@
 
   function updateHtmlOutput() {
     html = getQuillHtml();
-    console.log(html);
-    // document.getElementById('output-html').innerText = html;
+    document.getElementById("htmloutput").value = html;
+    // console.log(html);
+
     updateHighlight();
   }
 
   updateHtmlOutput();
 
 
-  function mysubmit() {
-    var title = document.getElementById("title").value
-    var author = document.getElementById("author").value
-    var series = document.getElementById("series").value
-    var time = document.getElementById("time").value
-    var date = document.getElementById("date").value
-    var tags = document.getElementById("tags").value
-    var meta = document.getElementById("meta").value
-    // var editor = document.getElementById("editor").value
-    var slug = document.getElementById("slug").value
-    var blog = {
-      "title": title,
-      "author": author,
-      "series": series,
-      "time": time,
-      "date": date,
-      "tags": tags,
-      "meta": meta,
-      "editor": html,
-      "slug": slug
-    }
-    fetch("/receiver", {
-      method: "POST",
-      body: JSON.stringify(blog),
-      headers: new Headers({
-        "content-type": "application/json"
-      })
-    })
-      .then(function (response) {
-        // At this point, Flask has printed our JSON
-        return response.text();
-      })
-      .then(function (text) {
-        console.log("hasfsf");
-      });
-    console.log(blog);
-  }
-</script>
+  // function mysubmit() {
+  //   var title = document.getElementById("title").value
+  //   var author = document.getElementById("author").value
+  //   var series = document.getElementById("series").value
+  //   var time = document.getElementById("time").value
+  //   var date = document.getElementById("date").value
+  //   var tags = document.getElementById("tags").value
+  //   var meta = document.getElementById("meta").value
+  //   // var editor = document.getElementById("editor").value
+  //   var slug = document.getElementById("slug").value
+  //   var blog = {
+  //     "title": title,
+  //     "author": author,
+  //     "series": series,
+  //     "time": time,
+  //     "date": date,
+  //     "tags": tags,
+  //     "meta": meta,
+  //     "editor": html,
+  //     "slug": slug
+  //   }
+  //   fetch("/receiver", {
+  //     method: "POST",
+  //     body: JSON.stringify(blog),
+  //     headers: new Headers({
+  //       "content-type": "application/json"
+  //     })
+  //   })
+  //     .then(function (response) {
+  //       // At this point, Flask has printed our JSON
+  //       return response.text();
+  //     })
+  //     .then(function (text) {
+  //       window.location.href = '';
+
+  //     });
+  // }
+</script> -->
 
 {% endblock %}
